Don't include compiled tests in package

--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
-  "name": "validation-and-mapping",
+  "name": "pojo-fluent-validator",
   "version": "1.0.0",
   "description": "Validation and conversion tool for plain old javascript objects.",
-  "main": "./out/validator/index.js",
-  "typings": "./out/validation/index",
+  "main": "./out/index.js",
+  "typings": "./out/index",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rd-dev-ukraine/lore.git"
+    "url": "git+https://github.com/rd-dev-ukraine/pojo-fluent-validator.git"
   },
   "scripts": {
     "test": "mocha ./out/test/index.js"
   },
+  "keywords": [
+    "validation",
+    "javascript",
+    "mapping",
+    "pojo"
+  ],
   "author": "Sergey Tokarev",
   "license": "MIT",
   "private": true,
