Strict mode of typescript compilation

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -2,7 +2,10 @@
     "compilerOptions": {
         "module": "commonjs",
         "target": "es5",
-        "noImplicitAny": false,
+        "noImplicitAny": true,
+        "allowUnreachableCode": false,
+        "noFallthroughCasesInSwitch": true,
+        "noImplicitReturns": true,
         "sourceMap": false,
         "outDir": "./js"
     },
