Make package from javascript files only. Fix typings.

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -7,7 +7,7 @@
         "noFallthroughCasesInSwitch": true,
         "noImplicitReturns": true,
         "sourceMap": false,
-        "outDir": "./js"
+        "outDir": "../dist"
     },
     "files": [
         "./index.ts"
