Refactor validate function to allow it return a new value

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -7,9 +7,7 @@
         "noFallthroughCasesInSwitch": true,
         "noImplicitReturns": true,
         "sourceMap": false,
-        "outDir": "../dist"
-    },
-    "files": [
-        "./index.ts"
-    ]
+        "outDir": "../dist",
+        "pretty": true
+    }
 }
